02-Master/02-Code/02-Specific/01-WinDLL/01-Shell/BaHartMaster.h

HARTDLL_API void WINAPI BAHA_PutDWord(TY_DWord data_, TY_Byte offset_,
    TY_Byte* data_ref_,
    EN_Endian endian_);
HARTDLL_API TY_Word WINAPI BAHA_PickWord(TY_Byte offset,
    TY_Byte* data_ref_,
    EN_Endian endian_);